# hubflow

./: .gitignore  Cargo.toml
.cursor/agents/: system-design-lead.md
docs/: technical_reference_en.md  technische_referenz_de.md
src/: main.rs
src/api/: mod.rs  server.rs  types.rs
src/core/: action.rs  cell.rs  class.rs  event.rs  inbox.rs  knot.rs  mod.rs  packet.rs  registry.rs  state.rs
src/persistence/: mod.rs  sqlite.rs
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.vue  main.js
ui/src/assets/: main.css
ui/src/components/: Canvas.vue  ConnectionStatus.vue  ContextMenu.vue  Inspector.vue  NodeToolbar.vue
ui/src/components/nodes/: ActionNode.vue  ClassNode.vue  HubNode.vue  ObjectNode.vue
ui/src/stores/: hubflow.js
