[package]
name = "hubflow"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid        = { version = "1",   features = ["v4", "serde"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1",   features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
