[package]
name        = "hubflow"
version     = "0.1.0"
edition     = "2024"

# See https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ── Identity & serialisation ───────────────────────────────────────────────────
uuid         = { version = "1",   features = ["v4", "serde"] }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1",   features = ["full"] }
futures-util = "0.3"

# ── Observability ─────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error handling ────────────────────────────────────────────────────────────
thiserror = "1"

# ── Persistence (.hflow SQLite file) ─────────────────────────────────────────
# "bundled" statically links libsqlite3 — no system dependency required.
rusqlite = { version = "0.31", features = ["bundled"] }

# ── Frontend API (WebSocket + REST) ──────────────────────────────────────────
axum        = { version = "0.7", features = ["ws", "json", "macros"] }
tower-http  = { version = "0.5", features = ["cors", "trace"] }
tower       = "0.4"
